--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
+
+    def lifecycle_version = "2.5.1"
+    def arch_version = "2.1.0"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+
+
 }
